--- a/index.html
+++ b/index.html
@@ -1,64 +1,3 @@
 <html>
-    <title>SoundTheSame</title>
-
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
-        .center {
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            top: 43%;
-            left: 46.9%;
-            margin-left: -50px;
-            margin-top: -25px; 
-        }
-
-        body {
-            background-color:black !important;
-        }
-
-        h3 {
-            color: white !important;
-            text-decoration: underline !important;
-        }
-
-        h6 {
-            color:#18c747 !important;
-            display: inline-block !important;
-        }
-
-        p {
-            color:white !important;
-            animation: animated-text 2s steps(30,end) 1s 1 normal both;
-            white-space: nowrap;
-            overflow: hidden;    
-            font-family: 'Source Code Pro', monospace;  
-            font-size: 20px;
-            color: rgba(255,255,255,.70);
-        }
-
-        @keyframes animated-text{
-            from{width: 0;}
-            to{width: 900px;}
-        }
-
-        a {
-            color:white !important;
-        }
-    </style>
-
-    <head>
-        <script src="https://cdn.sellix.io/static/js/embed.js" ></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-        <script src="https://kit.fontawesome.com/c599f4e307.js" crossorigin="anonymous"></script>
-    </head>
-
-    <body>
-        <div class="center">
-            <h3 class="animate__animated animate__fadeIn">SoundTheSame</h3>
-            <p>Reverse Engineer.</p>
-            <p>sts#2004 / <a href="https://github.com/SoundTheSame">GitHub</a></p>
-        </div>
-    </body>
+    <title>SemanticParse</title>
 </html>
