--- a/index.html
+++ b/index.html
@@ -1,3 +1,49 @@
 <html>
     <title>SemanticParse</title>
+    
+     <style>
+        @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+        .center {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            top: 43%;
+            left: 46.9%;
+            margin-left: -50px;
+            margin-top: -25px; 
+        }
+
+        body {
+            background-color:black !important;
+        }
+
+        h3 {
+            color: white !important;
+            text-decoration: underline !important;
+        }
+
+        h6 {
+            color:#18c747 !important;
+            display: inline-block !important;
+        }
+
+        p {
+            color:white !important;
+            animation: animated-text 2s steps(30,end) 1s 1 normal both;
+            white-space: nowrap;
+            overflow: hidden;    
+            font-family: 'Source Code Pro', monospace;  
+            font-size: 20px;
+            color: rgba(255,255,255,.70);
+        }
+
+        @keyframes animated-text{
+            from{width: 0;}
+            to{width: 900px;}
+        }
+
+        a {
+            color:white !important;
+        }
+    </style>
 </html>
