--- a/index.html
+++ b/index.html
@@ -46,4 +46,19 @@
             color:white !important;
         }
     </style>
+    
+     <head>
+        <script src="https://cdn.sellix.io/static/js/embed.js" ></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        <script src="https://kit.fontawesome.com/c599f4e307.js" crossorigin="anonymous"></script>
+    </head>
+    
+    <body>
+        <div class="center">
+            <h3 class="animate__animated animate__fadeIn">SemanticParse</h3>
+            <p>I'll be up there</p>
+            <p>one day. / <a href="https://github.com/SemanticParse">GitHub</a></p>
+        </div>
+    </body>
 </html>
