--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             color: rgba(255,255,255,.70);
         }
 
+        <video autoplay muted loop id="myVideo">
+        <source src="rain.mp4" type="video/mp4">
+        </video>
         @keyframes animated-text{
             from{width: 0;}
             to{width: 900px;}
@@ -58,7 +61,7 @@
         <div class="center">
             <h3 class="animate__animated animate__fadeIn">SemanticParse</h3>
             <p>I'll be up there</p>
-            <p>one day. / <a href="https://github.com/SemanticParse">GitHub</a></p>
+            <p>one day. / <a href="URL">"</a></p>
         </div>
     </body>
 </html>
