--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<html>
-    <title>SemanticParse</title>
-
-        <video autoplay muted loop id="myVideo">
-        <source src="rain.mp4" type="video/mp4">
-        </video>
-
-    
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, inital-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Landing</title>
+    </head>
     <body>
-        <div class="center">
-            <p>I'll be up there</p>
-            <p>one day. / <a href="https://youtube.com">"Link"</a></p>
-        </div>
+        <section class="showcase">
+            <header>
+              <div class="toggle"></div>
+              <div class="Button"></div>
+            </header>
+            <video src="GangShit_Trim.mp4" muted loop autoplay></video>
+            <div class="text">
+              <h2>[Semantic Parse]</h2> 
+            </div>
+          </section>
     </body>
-</html>
+</html>>
