--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
               <div class="toggle"></div>
               <div class="Button"></div>
             </header>
-            <video src="GangShit_Trim.mp4" muted loop autoplay></video>
+            <video src="BG" muted loop autoplay></video>
             <div class="text">
               <h2>[Semantic Parse]</h2> 
             </div>
