--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
               <div class="toggle"></div>
               <div class="Button"></div>
             </header>
+            <video src="https://cdn.discordapp.com/attachments/811068135293190144/863215535848030258/BG_Trim.mp4" muted loop autoplay></video>
             <div class="text">
               <h2>[Semantic Parse]</h2> 
             </div>
